--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
@@ -13,23 +14,73 @@
   </head>
 
   <body>
-    <footer>
-      <div class="content">
-        <div class="top">
-          <div class="logo-details">
-            <span class="logo_name">company</span>
+     <footer>
+        <div class="content">
+          <div class="top">
+            <div class="logo-details">
+              <span class="logo_name">company</span>
+            </div>
+            <div class="media-icons">
+              <!-- your code here -->
+              <ul class="social-icons">
+                <li style="background-color:#1DA1F2;"><a href="https://twitter.com/yourprofile" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                <li style="background-color:#eb349b;"><a href="https://instagram.com/yourprofile" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                <li style="background-color:#316FF6;"><a href="https://facebook.com/yourprofile" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                <li style="background-color:#eb3434;"><a href="https://youtube.com/yourprofile" target="_blank"><i class="fab fa-youtube"></i></a></li>
+                <li style="background-color:#0077B5;"><a href="https://linkedin.com/in/yourprofile" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+            </ul>
+            </div>
           </div>
-          <div class="media-icons">
+          <div class="link-boxes">
             <!-- your code here -->
+            <div class="nav-link">
+                <span class="links-title">Links</span>
+                <ul class="links">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Get Started</a></li>
+                </ul>
+            </div>
+
+            <div class="nav-link">
+                <span class="links-title">Services</span>
+                <ul class="links">
+                    <li><a href="#">App Design</a></li>
+                    <li><a href="#">Web Design</a></li>
+                    <li><a href="#">Logo Design</a></li>
+                    <li><a href="#">Banner Design</a></li>
+                </ul>
+            </div>
+
+            <div class="nav-link">
+                <span class="links-title">Other Services</span>
+                <ul class="links">
+                    <li><a href="#">SEO</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Content Marketing</a></li>
+                    <li><a href="#">Prints</a></li>
+                    <li><a href="#">Social Media</a></li>
+                </ul>
+            </div>
+
+            <div class="nav-link">
+                <span class="links-title">Conatct</span>
+                <ul class="links">
+                    <li><a href="#">+91 8879887262</a></li>
+                    <li><a href="#">+91 8879887262</a></li>
+                    <li><a href="#">contact@company.com Us</a></li>
+                </ul>
+            </div>
+
           </div>
         </div>
-        <div class="link-boxes">
+        <div class="bottom-details">
           <!-- your code here -->
+           <p class="copy-right">CopyRight Ⓒ 2021 Company</p>
+           <p class="Privacy">Privacy Policy</p>
+          
         </div>
-      </div>
-      <div class="bottom-details">
-        <!-- your code here -->
-      </div>
-    </footer>
+      </footer>
   </body>
 </html>
